@@ -1,3 +1,5 @@
+# -*- coding: utf-8 -*-
+
 import morepath
 from morepath import setup
 from morepath.converter import Converter
@@ -1670,3 +1672,102 @@ def test_resolve_path_with_dots_in_url():
 
     response = c.get('/root/%2E%2E/%2E%2E/test', expect_errors=True)
     assert response.status_code == 404
+
+
+def test_quoting_link_generation():
+    config = setup()
+
+    class App(morepath.App):
+        testing_config = config
+
+    class Model(object):
+        def __init__(self):
+            pass
+
+    @App.path(model=Model, path='sim?ple')
+    def get_model():
+        return Model()
+
+    @App.view(model=Model)
+    def default(self, request):
+        return "View"
+
+    @App.view(model=Model, name='link')
+    def link(self, request):
+        return request.link(self)
+
+    config.commit()
+
+    c = Client(App())
+
+    response = c.get('/sim%3Fple')
+    assert response.body == b'View'
+
+    response = c.get('/sim%3Fple/link')
+    assert response.body == b'http://localhost/sim%3Fple'
+
+
+def test_quoting_link_generation_umlaut():
+    config = setup()
+
+    class App(morepath.App):
+        testing_config = config
+
+    class Model(object):
+        def __init__(self):
+            pass
+
+    @App.path(model=Model, path=u'simëple')
+    def get_model():
+        return Model()
+
+    @App.view(model=Model)
+    def default(self, request):
+        return "View"
+
+    @App.view(model=Model, name='link')
+    def link(self, request):
+        return request.link(self)
+
+    config.commit()
+
+    c = Client(App())
+
+    response = c.get('/sim%C3%ABple')
+    assert response.body == b'View'
+
+    response = c.get('/sim%C3%ABple/link')
+    assert response.body == b'http://localhost/sim%C3%ABple'
+
+
+def test_parameter_quoting():
+    config = setup()
+
+    class App(morepath.App):
+        testing_config = config
+
+    class Model(object):
+        def __init__(self, s):
+            self.s = s
+
+    @App.path(model=Model, path='')
+    def get_model(s):
+        return Model(s)
+
+    @App.view(model=Model)
+    def default(self, request):
+        return u"View: %s" % self.s
+
+    @App.view(model=Model, name='link')
+    def link(self, request):
+        return request.link(self)
+
+    config.commit()
+
+    c = Client(App())
+
+    response = c.get('/?s=sim%C3%ABple')
+    assert response.body == u"View: simëple".encode('utf-8')
+
+    response = c.get('/link?s=sim%C3%ABple')
+    assert response.body == b'http://localhost/?s=sim%C3%ABple'
